--- a/maker.yml
+++ b/maker.yml
@@ -4,6 +4,7 @@ packages:
   - plyr
   - dplyr
   - xtable
+  - igraph
 
 sources:
   - R
@@ -21,59 +22,35 @@ targets:
 
   data:
     depends:
-      - FlowerParts
-      - AvCountsPerMM
-      - RegressionTable
-      - OrderedListsOfParts
-      - AvWeightPerUnit
-      - IndividualBasedWeights
-      - FloweringCategories
-      - Reproduction
+      - IndividualsList
+      - FlowerPartsData
+      - ReproductionData
+      - HarvestData
       - MultiplierTable
-      - GraphMaps
-      - species_data
 
 
   # Data --------------------------------------
-  FlowerParts:
+  IndividualsList:
+    command: read_csv("data/all_plants.csv")
+
+  FlowerPartsData:
     command: read_csv("data/flower_parts.csv")
-
-  IndividualBasedWeights:
-    command: make_IndividualBasedWeights(FlowerParts)
-
-  AvCountsPerMM:
-    command: make_AvCountsPerMM(FlowerParts)
-
-  RegressionTable:
-    command: make_RegressionTable(FlowerParts)
-
-  OrderedListsOfParts:
-    command: make_OrderedListsOfParts()
-
-  AvWeightPerUnit:
-    command: make_AvWeightPerUnit(OrderedListsOfParts, FlowerParts)
-
-  FloweringCategories:
-    command: read_csv("data/Flowering_cat_lookup_table.csv")
 
   Reproduction_raw:
     command: read_csv("data/reproduction.csv")
 
-  Reproduction:
+  ReproductionData:
     command: filterForAllocation(Reproduction_raw, IndividualsList)
+
+  HarvestData:
+    command: read_csv("data/2013_Kuringgai_harvest.csv")
+
+  FloweringCategories:
+    command: read_csv("data/Flowering_cat_lookup_table.csv")
 
   MultiplierTable:
     command: read_csv("data/MultiplierTable.csv")
 
   InvestmentCategories:
     command: read_csv("data/Accessory_parts_lookup_table.csv")
-
-  GraphMaps:
-    command: make_GraphMaps(AvWeightPerUnit, MultiplierTable)
-
-  HarvestData:
-    command: read_csv("data/2013_Kuringgai_harvest.csv")
-
-  IndividualsList:
-    command: read_csv("data/all_plants.csv")
 
