--- a/maker.yml
+++ b/maker.yml
@@ -31,10 +31,10 @@ targets:
 
   # Data --------------------------------------
   IndividualsList:
-    command: read_csv("data/all_plants.csv")
+    command: read_csv("data/individuals.csv")
 
   FlowerPartsData:
-    command: read_csv("data/flower_parts.csv")
+    command: read_csv("data/flowerParts.csv")
 
   Reproduction_raw:
     command: read_csv("data/reproduction.csv")
@@ -43,14 +43,14 @@ targets:
     command: filterForAllocation(Reproduction_raw, IndividualsList)
 
   HarvestData:
-    command: read_csv("data/2013_Kuringgai_harvest.csv")
+    command: read_csv("data/harvest.csv")
 
   FloweringCategories:
-    command: read_csv("data/Flowering_cat_lookup_table.csv")
+    command: read_csv("data/flowerCategories.csv")
 
   MultiplierTable:
-    command: read_csv("data/MultiplierTable.csv")
+    command: read_csv("data/multiplierTable.csv")
 
   InvestmentCategories:
-    command: read_csv("data/Accessory_parts_lookup_table.csv")
+    command: read_csv("data/accessoryParts.csv")
 
